# cpp_tic_tac_toe

./: .gitignore  README.md
ai/: CMakeLists.txt  cns.hpp  common.hpp  countreward.hpp  descent.hpp  game.hpp  hash.hpp  main.cpp  model.hpp  movelegal.hpp  movelist.hpp  nn.hpp  position.hpp  search.hpp  selfplay.hpp  thread.hpp  ubfm.hpp  util.hpp
learn/: all.ods  analyze_selfplay.py  evaluate_network.py  evaluate_network2.py  evaluate_network2_trans.py  evaluate_network_trans.py  game.py  game_.py  gamelibs.cpp  generate_oracle.py  generate_poolformer_model.py  generate_transformer_model.py  history_dataset.py  make.sh  merge_count.py  merge_resolved.py  pseudo_data.py  pv_ubfm.py  reset.sh  reset_trans.sh  selfplay.sh  single_network.py  train.py  train.sh  train_network.py  train_network4.py  train_network_trans.py  train_trans.py  train_trans.sh  train_worker.py  train_worker_trans.py
